[Material][Mac] Update the incognito vector icon color to white

BUG=621068

Review-Url: https://codereview.chromium.org/2083813005
Cr-Commit-Position: refs/heads/master@{#401477}

Former-commit-id: 0ac19cbddbeda10015a9bbdd9bce1b53715e56a0