chrome/browser/ui/cocoa/location_bar/location_bar_decoration.mm
@@ -136,8 +136,7 @@ NSSize LocationBarDecoration::GetLabelSize(NSString* label,
 
 SkColor LocationBarDecoration::GetMaterialIconColor(
     bool location_bar_is_dark) const {
-  return location_bar_is_dark ? kMaterialDarkModeTextColor
-                              : gfx::kChromeIconGrey;
+  return location_bar_is_dark ? SK_ColorWHITE : gfx::kChromeIconGrey;
 }
 
 NSColor* LocationBarDecoration::GetDividerColor(
